--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "version": "1.1.3",
   "author": "Austin Green",
   "dependencies": {
+    "@tailwindcss/typography": "^0.3.1",
+    "autoprefixer": "^10.1.0",
     "bulma": "^0.9.0",
     "gatsby": "^2.20.35",
     "gatsby-image": "^2.3.5",
+    "gatsby-plugin-emotion": "^4.3.14",
     "gatsby-plugin-netlify": "^2.2.4",
     "gatsby-plugin-netlify-cms": "^4.2.5",
+    "gatsby-plugin-postcss": "^3.4.0",
     "gatsby-plugin-purgecss": "^5.0.0",
     "gatsby-plugin-react-helmet": "^3.2.5",
-    "gatsby-plugin-sass": "^2.2.4",
+    "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sharp": "^2.5.7",
     "gatsby-remark-copy-linked-files": "^2.2.4",
     "gatsby-remark-images": "^3.2.6",
@@ -24,11 +28,19 @@
     "netlify-cms-app": "^2.9.6",
     "netlify-cms-media-library-cloudinary": "^1.3.2",
     "netlify-cms-media-library-uploadcare": "^0.5.2",
-    "node-sass": "^4.14.0",
+    "postcss": "^8.2.1",
     "prop-types": "^15.6.0",
     "react": "^16.8.4",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-burger-menu": "^2.9.0",
     "react-dom": "^16.8.4",
+    "react-headroom": "^3.0.0",
     "react-helmet": "^6.0.0",
+    "react-icons": "^3.11.0",
+    "react-reveal": "^1.2.2",
+    "react-tooltip": "^4.2.10",
+    "tailwindcss": "^2.0.2",
+    "twin.macro": "^1.11.1",
     "uuid": "^7.0.0"
   },
   "keywords": [
@@ -45,6 +57,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@tailwindcss/custom-forms": "^0.2.1",
     "prettier": "^2.0.5"
   }
 }
