--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "author": "Austin Green",
   "dependencies": {
     "@tailwindcss/typography": "^0.3.1",
+    "algoliasearch": "^4.5.1",
     "autoprefixer": "^10.1.0",
-    "gatsby": "^2.20.35",
     "fontsource-fruktur": "^3.1.5",
     "fontsource-merriweather": "^3.1.5",
     "fontsource-merriweather-sans": "^3.1.6",
+    "gatsby": "^2.20.35",
     "gatsby-image": "^2.3.5",
+    "gatsby-plugin-algolia": "^0.3.0",
     "gatsby-plugin-emotion": "^4.3.14",
     "gatsby-plugin-netlify": "^2.2.4",
     "gatsby-plugin-netlify-cms": "^4.2.5",
@@ -19,6 +21,10 @@
     "gatsby-plugin-react-helmet": "^3.2.5",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sharp": "^2.5.7",
+    "gatsby-remark-prismjs": "^3.2.9",
+    "react-instantsearch-dom": "^6.8.2",
+    "gatsby-remark-responsive-iframe": "^2.1.1",
+    "gatsby-remark-smartypants": "^2.0.9",
     "gatsby-remark-copy-linked-files": "^2.2.4",
     "gatsby-remark-images": "^3.2.6",
     "gatsby-remark-relative-images": "^0.3.0",
@@ -27,6 +33,7 @@
     "gatsby-transformer-sharp": "^2.4.7",
     "lodash": "^4.17.15",
     "lodash-webpack-plugin": "^0.11.4",
+    "striptags": "^3.1.1",
     "netlify-cms-app": "^2.9.6",
     "netlify-cms-media-library-cloudinary": "^1.3.2",
     "netlify-cms-media-library-uploadcare": "^0.5.2",
