--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-instantsearch-dom": "^6.8.2",
     "react-reveal": "^1.2.2",
     "react-tooltip": "^4.2.10",
+    "lottie-web": "^5.7.3",
     "striptags": "^3.1.1",
     "tailwindcss": "^2.0.2",
     "twin.macro": "^1.11.1",
