--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-image": "^2.3.5",
     "gatsby-plugin-algolia": "^0.3.0",
     "gatsby-plugin-emotion": "^4.3.14",
+    "gatsby-plugin-manifest": "^2.4.35",
     "gatsby-plugin-netlify": "^2.2.4",
     "gatsby-plugin-netlify-cms": "^4.2.5",
     "gatsby-plugin-postcss": "^3.4.0",
@@ -27,6 +28,7 @@
     "gatsby-remark-relative-images": "^0.3.0",
     "gatsby-remark-responsive-iframe": "^2.1.1",
     "gatsby-remark-smartypants": "^2.0.9",
+    "gatsby-plugin-offline": "^3.2.37",
     "gatsby-source-filesystem": "^2.2.5",
     "gatsby-transformer-remark": "^2.7.5",
     "gatsby-transformer-sharp": "^2.4.7",
